Change neural progenitor culture icon to show full process
- Update icon from brain (🧠) to mouse→brain→petri dish (🐭→🧠→🧫)
- Visually represents the complete isolation process
- Shows embryonic mouse brain extraction and neurosphere culture

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 category: 'cell',
                 duration: '2-3 hours isolation + 48-72h sphere formation',
                 link: 'neural-progenitor-culture.html',
-                icon: '🧠',
+                icon: '🐭→🧠→🧫',
                 tags: ['Neural progenitors', 'Neurospheres', 'Stem cells', 'EGF', 'FGF', 'Embryonic', 'Telencephalon', 'NSPCs', 'Nestin', 'Sox2', 'Mouse', 'IACUC']
             }
         ],
