Change astrocyte isolation icon to show full process
- Update icon from star (⭐) to mouse→brain→petri dish (🐭→🧠→🧫)
- Visually represents the complete isolation process
- Shows neonatal/adult mouse brain extraction and astrocyte culture
- Consistent with other primary cell isolation protocol icons

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 category: 'cell',
                 duration: '1-2 hours isolation + 7-14 days culture',
                 link: 'astrocyte-isolation.html',
-                icon: '⭐',
+                icon: '🐭→🧠→🧫',
                 tags: ['Astrocytes', 'Primary cells', 'Brain', 'Trypsin', 'GFAP', 'Glial cells', 'Neonatal', 'Mouse', 'Cell isolation', 'Neuroscience', 'IACUC']
             },
             {
