Add Delta Ct calculation protocol for Bio-Rad RT-qPCR analysis
New protocol added:
- delta-ct-calculation.html - Complete ΔCt and ΔΔCt calculation workflow
- Bio-Rad CFX Maestro data export and analysis
- 7 interactive steps with checklists and examples
- Quality control guidelines (SD < 0.5, reference gene stability)
- Error propagation for ΔCt standard deviation
- Fold change interpretation with ΔΔCt method
- Reference gene comparison table (ACTB, GAPDH, 18S, HPRT1, TBP, RPLP0)
- Complete troubleshooting guide
- Data reporting guidelines for publications

Features:
- Interactive Alpine.js checklists for all 7 steps
- Color-coded formulas and calculation examples
- Blue-700 theme matching molecular biology category
- Mobile-responsive Tailwind CSS design
- Complete with quality control decision logic

Updated files:
- index.html - Added Delta Ct protocol to molecular biology section
- Icon: 📊 (data analysis chart)
- Tags: qPCR, RT-qPCR, Delta Ct, ΔCt, ΔΔCt, Bio-Rad, gene expression

Total protocols: 15 (RNA isolation → Delta Ct workflow complete)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
                 tags: ['RNA', 'cDNA', 'TRIzol', 'Reverse Transcription', 'qPCR prep']
             },
             {
+                title: 'Delta Ct (ΔCt) Calculation Protocol',
+                description: 'Bio-Rad RT-qPCR data analysis protocol for calculating normalized gene expression with ΔCt and ΔΔCt methods',
+                category: 'molecular',
+                duration: '~1-2 hours',
+                link: 'delta-ct-calculation.html',
+                icon: '📊',
+                tags: ['qPCR', 'RT-qPCR', 'Delta Ct', 'ΔCt', 'ΔΔCt', 'Bio-Rad', 'CFX Maestro', 'Gene expression', 'Normalization', 'Fold change', 'Data analysis']
+            },
+            {
                 title: 'Western Blot',
                 description: 'Complete immunoblotting protocol from cell lysis to band visualization',
                 category: 'protein',
