--- a/delta-ct-calculation.html
+++ b/delta-ct-calculation.html
@@ -133,7 +133,7 @@
                         </p>
                     </div>
 
-                    <div class="bg-gray-50 p-4 rounded-lg">
+                    <div class="bg-gray-50 p-4 rounded-lg mb-4">
                         <h3 class="text-lg font-semibold text-gray-800 mb-3">Workflow Overview</h3>
                         <ol class="list-decimal list-inside space-y-2 text-gray-700">
                             <li>Export data from Bio-Rad CFX Maestro software</li>
@@ -144,6 +144,31 @@
                             <li>Interpret ΔCt values</li>
                             <li>Optional: Calculate ΔΔCt for fold change analysis</li>
                         </ol>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-lg font-semibold text-gray-800 mb-4 text-center">Complete Workflow</h3>
+                        <div class="flex flex-col items-center gap-4">
+                            <div class="bg-gradient-to-r from-purple-600 to-purple-700 text-white px-8 py-4 rounded-full shadow-lg font-semibold text-center min-w-[280px]">
+                                1. Export Data from Bio-Rad
+                            </div>
+                            <div class="w-0 h-0 border-l-[20px] border-l-transparent border-r-[20px] border-r-transparent border-t-[30px] border-t-blue-500"></div>
+                            <div class="bg-gradient-to-r from-purple-600 to-purple-700 text-white px-8 py-4 rounded-full shadow-lg font-semibold text-center min-w-[280px]">
+                                2. Organize & QC Data
+                            </div>
+                            <div class="w-0 h-0 border-l-[20px] border-l-transparent border-r-[20px] border-r-transparent border-t-[30px] border-t-blue-500"></div>
+                            <div class="bg-gradient-to-r from-purple-600 to-purple-700 text-white px-8 py-4 rounded-full shadow-lg font-semibold text-center min-w-[280px]">
+                                3. Calculate Mean Ct
+                            </div>
+                            <div class="w-0 h-0 border-l-[20px] border-l-transparent border-r-[20px] border-r-transparent border-t-[30px] border-t-blue-500"></div>
+                            <div class="bg-gradient-to-r from-purple-600 to-purple-700 text-white px-8 py-4 rounded-full shadow-lg font-semibold text-center min-w-[280px]">
+                                4. Calculate ΔCt
+                            </div>
+                            <div class="w-0 h-0 border-l-[20px] border-l-transparent border-r-[20px] border-r-transparent border-t-[30px] border-t-blue-500"></div>
+                            <div class="bg-gradient-to-r from-purple-600 to-purple-700 text-white px-8 py-4 rounded-full shadow-lg font-semibold text-center min-w-[280px]">
+                                5. Statistical Analysis
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -201,6 +226,65 @@
                         <div class="bg-yellow-50 border-l-4 border-yellow-500 p-3 mt-4">
                             <p class="text-sm font-semibold text-yellow-900">NOTE: Ensure the export includes Sample names, Target names, Cq values, Well positions, and Technical replicates.</p>
                         </div>
+                    </div>
+
+                    <div class="bg-white p-6 rounded-lg shadow-md mb-4">
+                        <h3 class="text-lg font-semibold text-gray-800 mb-4 text-center">Bio-Rad CFX Maestro Interface</h3>
+                        <svg viewBox="0 0 800 400" class="w-full max-w-3xl mx-auto">
+                            <!-- Main window -->
+                            <rect x="50" y="30" width="700" height="350" fill="#f0f0f0" stroke="#333" stroke-width="2"/>
+
+                            <!-- Title bar -->
+                            <rect x="50" y="30" width="700" height="40" fill="#3498db"/>
+                            <text x="400" y="55" text-anchor="middle" fill="white" font-size="18" font-weight="bold">CFX Maestro - Quantification</text>
+
+                            <!-- Menu bar -->
+                            <rect x="50" y="70" width="700" height="30" fill="#2980b9"/>
+                            <text x="100" y="90" fill="white" font-size="14">File</text>
+                            <text x="170" y="90" fill="white" font-size="14">Data Analysis</text>
+                            <text x="290" y="90" fill="white" font-size="14">Export</text>
+                            <text x="370" y="90" fill="white" font-size="14">Tools</text>
+
+                            <!-- Amplification curves -->
+                            <rect x="70" y="120" width="450" height="240" fill="white" stroke="#999"/>
+                            <text x="290" y="145" text-anchor="middle" font-size="14" font-weight="bold">Amplification Curves</text>
+
+                            <!-- Sample curves -->
+                            <path d="M 80 320 Q 150 300 200 250 T 320 180 T 440 150 T 500 145" stroke="#e74c3c" stroke-width="2" fill="none"/>
+                            <path d="M 80 330 Q 150 310 200 260 T 320 190 T 440 160 T 500 155" stroke="#3498db" stroke-width="2" fill="none"/>
+                            <path d="M 80 340 Q 150 320 200 270 T 320 200 T 440 170 T 500 165" stroke="#2ecc71" stroke-width="2" fill="none"/>
+
+                            <!-- Axes -->
+                            <line x1="80" y1="350" x2="510" y2="350" stroke="#333" stroke-width="1"/>
+                            <line x1="80" y1="130" x2="80" y2="350" stroke="#333" stroke-width="1"/>
+                            <text x="290" y="375" text-anchor="middle" font-size="12">Cycle</text>
+                            <text x="60" y="240" font-size="12" transform="rotate(-90 60 240)">RFU</text>
+
+                            <!-- Data table -->
+                            <rect x="540" y="120" width="190" height="240" fill="white" stroke="#999"/>
+                            <text x="635" y="145" text-anchor="middle" font-size="14" font-weight="bold">Cq Results</text>
+
+                            <!-- Table header -->
+                            <rect x="545" y="155" width="180" height="25" fill="#3498db"/>
+                            <text x="585" y="172" fill="white" font-size="11">Sample</text>
+                            <text x="680" y="172" fill="white" font-size="11">Cq</text>
+
+                            <!-- Table rows -->
+                            <rect x="545" y="180" width="90" height="20" fill="#ecf0f1"/>
+                            <rect x="635" y="180" width="90" height="20" fill="#ecf0f1"/>
+                            <text x="555" y="194" font-size="10">Sample 1</text>
+                            <text x="650" y="194" font-size="10">18.45</text>
+
+                            <rect x="545" y="200" width="90" height="20" fill="white"/>
+                            <rect x="635" y="200" width="90" height="20" fill="white"/>
+                            <text x="555" y="214" font-size="10">Sample 2</text>
+                            <text x="650" y="214" font-size="10">18.62</text>
+
+                            <rect x="545" y="220" width="90" height="20" fill="#ecf0f1"/>
+                            <rect x="635" y="220" width="90" height="20" fill="#ecf0f1"/>
+                            <text x="555" y="234" font-size="10">Sample 3</text>
+                            <text x="650" y="234" font-size="10">18.51</text>
+                        </svg>
                     </div>
 
                     <div class="bg-gray-50 p-4 rounded-lg">
@@ -333,6 +417,46 @@
                             </ul>
                         </div>
 
+                        <div class="bg-white p-6 rounded-lg shadow-md mb-4">
+                            <h4 class="text-lg font-semibold text-gray-800 mb-4 text-center">Quality Control Decision Tree</h4>
+                            <svg viewBox="0 0 700 300" class="w-full max-w-2xl mx-auto">
+                                <!-- Start -->
+                                <rect x="250" y="10" width="200" height="50" rx="25" fill="#3498db" stroke="#2980b9" stroke-width="2"/>
+                                <text x="350" y="40" text-anchor="middle" fill="white" font-weight="bold">Calculate SD</text>
+
+                                <!-- Arrow down -->
+                                <line x1="350" y1="60" x2="350" y2="90" stroke="#333" stroke-width="2" marker-end="url(#arrowhead)"/>
+
+                                <!-- Decision diamond -->
+                                <path d="M 350 90 L 450 140 L 350 190 L 250 140 Z" fill="#f39c12" stroke="#e67e22" stroke-width="2"/>
+                                <text x="350" y="135" text-anchor="middle" font-size="13" font-weight="bold">SD &gt; 0.5?</text>
+                                <text x="350" y="150" text-anchor="middle" font-size="13" font-weight="bold"></text>
+
+                                <!-- Yes path -->
+                                <line x1="450" y1="140" x2="550" y2="140" stroke="#333" stroke-width="2" marker-end="url(#arrowhead)"/>
+                                <text x="480" y="130" font-size="12" fill="#e74c3c" font-weight="bold">Yes</text>
+
+                                <rect x="550" y="115" width="130" height="50" rx="5" fill="#e74c3c" stroke="#c0392b" stroke-width="2"/>
+                                <text x="615" y="135" text-anchor="middle" fill="white" font-size="11" font-weight="bold">Exclude outlier</text>
+                                <text x="615" y="150" text-anchor="middle" fill="white" font-size="11" font-weight="bold">or re-run</text>
+
+                                <!-- No path -->
+                                <line x1="250" y1="140" x2="150" y2="140" stroke="#333" stroke-width="2" marker-end="url(#arrowhead)"/>
+                                <text x="220" y="130" font-size="12" fill="#2ecc71" font-weight="bold">No</text>
+
+                                <rect x="20" y="115" width="130" height="50" rx="5" fill="#2ecc71" stroke="#27ae60" stroke-width="2"/>
+                                <text x="85" y="135" text-anchor="middle" fill="white" font-size="11" font-weight="bold">Accept data</text>
+                                <text x="85" y="150" text-anchor="middle" fill="white" font-size="11" font-weight="bold">Proceed to ΔCt</text>
+
+                                <!-- Arrow marker definition -->
+                                <defs>
+                                    <marker id="arrowhead" markerWidth="10" markerHeight="10" refX="9" refY="3" orient="auto">
+                                        <polygon points="0 0, 10 3, 0 6" fill="#333"/>
+                                    </marker>
+                                </defs>
+                            </svg>
+                        </div>
+
                         <div class="bg-red-50 border-l-4 border-red-500 p-4">
                             <p class="font-semibold text-red-800 mb-2">Quality Control Checkpoint:</p>
                             <p class="text-red-700 text-sm">
@@ -374,6 +498,53 @@
                             <div class="bg-white p-3 rounded border border-green-300">
                                 <p class="font-mono text-center">ΔCt = 24.35 - 18.45 = <strong class="text-green-700 text-xl">5.90</strong></p>
                             </div>
+                        </div>
+
+                        <div class="bg-white p-6 rounded-lg shadow-md mb-4">
+                            <h4 class="text-lg font-semibold text-gray-800 mb-4 text-center">ΔCt Calculation Visualization</h4>
+                            <svg viewBox="0 0 800 250" class="w-full max-w-3xl mx-auto">
+                                <!-- Cycle axis -->
+                                <line x1="50" y1="200" x2="750" y2="200" stroke="#333" stroke-width="2"/>
+
+                                <!-- Cycle markers -->
+                                <text x="100" y="220" text-anchor="middle" font-size="12">10</text>
+                                <text x="200" y="220" text-anchor="middle" font-size="12">15</text>
+                                <text x="300" y="220" text-anchor="middle" font-size="12">20</text>
+                                <text x="400" y="220" text-anchor="middle" font-size="12">25</text>
+                                <text x="500" y="220" text-anchor="middle" font-size="12">30</text>
+                                <text x="600" y="220" text-anchor="middle" font-size="12">35</text>
+
+                                <!-- Tick marks -->
+                                <line x1="100" y1="195" x2="100" y2="205" stroke="#333" stroke-width="2"/>
+                                <line x1="200" y1="195" x2="200" y2="205" stroke="#333" stroke-width="2"/>
+                                <line x1="300" y1="195" x2="300" y2="205" stroke="#333" stroke-width="2"/>
+                                <line x1="400" y1="195" x2="400" y2="205" stroke="#333" stroke-width="2"/>
+                                <line x1="500" y1="195" x2="500" y2="205" stroke="#333" stroke-width="2"/>
+                                <line x1="600" y1="195" x2="600" y2="205" stroke="#333" stroke-width="2"/>
+
+                                <!-- Reference gene marker -->
+                                <circle cx="320" cy="200" r="8" fill="#2ecc71" stroke="#27ae60" stroke-width="2"/>
+                                <line x1="320" y1="200" x2="320" y2="80" stroke="#2ecc71" stroke-width="2" stroke-dasharray="5,5"/>
+                                <rect x="270" y="60" width="100" height="30" rx="5" fill="#2ecc71"/>
+                                <text x="320" y="80" text-anchor="middle" fill="white" font-weight="bold" font-size="12">ACTB: 18.45</text>
+
+                                <!-- Target gene marker -->
+                                <circle cx="438" cy="200" r="8" fill="#e74c3c" stroke="#c0392b" stroke-width="2"/>
+                                <line x1="438" y1="200" x2="438" y2="120" stroke="#e74c3c" stroke-width="2" stroke-dasharray="5,5"/>
+                                <rect x="388" y="100" width="100" height="30" rx="5" fill="#e74c3c"/>
+                                <text x="438" y="120" text-anchor="middle" fill="white" font-weight="bold" font-size="12">VEGFA: 24.35</text>
+
+                                <!-- Delta Ct bracket -->
+                                <line x1="320" y1="150" x2="438" y2="150" stroke="#9b59b6" stroke-width="3"/>
+                                <line x1="320" y1="145" x2="320" y2="155" stroke="#9b59b6" stroke-width="3"/>
+                                <line x1="438" y1="145" x2="438" y2="155" stroke="#9b59b6" stroke-width="3"/>
+
+                                <rect x="334" y="135" width="70" height="30" rx="5" fill="#9b59b6"/>
+                                <text x="369" y="155" text-anchor="middle" fill="white" font-weight="bold" font-size="14">ΔCt = 5.90</text>
+
+                                <!-- Axis label -->
+                                <text x="400" y="245" text-anchor="middle" font-size="14" font-weight="bold">PCR Cycle Number (Ct value)</text>
+                            </svg>
                         </div>
                     </div>
 
@@ -574,11 +745,42 @@
                             </div>
                         </div>
 
-                        <div class="bg-gray-50 p-4 rounded-lg">
+                        <div class="bg-gray-50 p-4 rounded-lg mb-4">
                             <h4 class="font-semibold text-gray-800 mb-2">Excel Formula for Fold Change:</h4>
                             <code class="bg-white px-3 py-2 rounded block text-sm mb-2">=2^(-ΔΔCt)</code>
                             <code class="bg-white px-3 py-2 rounded block text-sm">=2^(-(I2-I3))</code>
                             <p class="text-gray-600 text-sm mt-2">Where I2 = ΔCt of sample, I3 = ΔCt of control</p>
+                        </div>
+
+                        <div class="bg-white p-6 rounded-lg shadow-md mb-4">
+                            <h4 class="text-lg font-semibold text-gray-800 mb-4 text-center">Fold Change Interpretation</h4>
+                            <svg viewBox="0 0 600 250" class="w-full max-w-2xl mx-auto">
+                                <!-- Baseline -->
+                                <line x1="50" y1="150" x2="550" y2="150" stroke="#333" stroke-width="3"/>
+                                <text x="300" y="175" text-anchor="middle" font-size="14" font-weight="bold">No Change (Fold Change = 1)</text>
+
+                                <!-- Control bar -->
+                                <rect x="120" y="130" width="80" height="20" fill="#95a5a6"/>
+                                <text x="160" y="120" text-anchor="middle" font-size="12" font-weight="bold">Control</text>
+                                <text x="160" y="200" text-anchor="middle" font-size="11">ΔCt = 5.90</text>
+
+                                <!-- Treated bar (up) -->
+                                <rect x="380" y="50" width="80" height="100" fill="#e74c3c"/>
+                                <text x="420" y="40" text-anchor="middle" font-size="12" font-weight="bold">Treated</text>
+                                <text x="420" y="200" text-anchor="middle" font-size="11">ΔCt = 3.59</text>
+
+                                <!-- Fold change indicator -->
+                                <text x="420" y="100" text-anchor="middle" fill="white" font-size="16" font-weight="bold">4.96×</text>
+
+                                <!-- Arrow -->
+                                <defs>
+                                    <marker id="arrowup" markerWidth="10" markerHeight="10" refX="9" refY="3" orient="auto">
+                                        <polygon points="0 0, 10 3, 0 6" fill="#2ecc71"/>
+                                    </marker>
+                                </defs>
+                                <path d="M 210 140 L 370 90" stroke="#2ecc71" stroke-width="3" marker-end="url(#arrowup)"/>
+                                <text x="290" y="110" text-anchor="middle" font-size="13" fill="#2ecc71" font-weight="bold">Upregulated</text>
+                            </svg>
                         </div>
 
                         <div class="mt-4 bg-blue-50 border-l-4 border-blue-700 p-4">
