Add Recipes & Reagents comprehensive reference page
New Feature: Consolidated recipe reference for all protocols
- Created recipes.html with 20+ complete formulations
- Searchable and filterable by category
- Categories: Lysis, Electrophoresis, Transfer/Blocking, PCR, Cell Culture, Perfusion, Staining

Recipe Content:
- Lysis Buffers: Base RIPA, Strong RIPA, 25X protease inhibitor, 20X phosphatase inhibitor
- Electrophoresis: 10X running buffer, 5X loading dye with β-mercaptoethanol
- Transfer/Blocking: Transfer buffer (Towbin), 10X TBS-T, 5% milk, 5% BSA
- PCR/Molecular: PCR master mix, 50X TAE, cDNA synthesis master mix
- Cell Culture: Complete growth media, neurosphere media, astrocyte media
- Perfusion: EGTA buffer, Liberase buffer (hepatocyte isolation)
- Staining: Hematoxylin, Eosin Y, BODIPY stock, citrate antigen retrieval, DAB substrate

Features:
- Each recipe includes ingredients table with concentrations and amounts
- Step-by-step preparation instructions
- Storage conditions and shelf life
- Important notes and safety warnings
- Searchable tags
- Color-coded category badges
- Green/Teal theme for easy identification
- Mobile-responsive Alpine.js + Tailwind design

Index.html updates:
- Added prominent "Recipes & Reagents" button in header
- Added large banner in main content with direct link
- Quick access from any page

Purpose: Quick reference for making buffers/reagents without navigating full protocols

Total pages: 15 protocols + 1 index + 1 recipes reference = 17 pages

--- a/index.html
+++ b/index.html
@@ -176,7 +176,13 @@
                         <h1 class="text-4xl md:text-5xl font-bold mb-3">Dasgupta lab protocols; compiled and adapted by Roman</h1>
                         <p class="text-indigo-100 text-lg">Comprehensive molecular biology and protein analysis protocols</p>
                     </div>
-                    <div class="hidden md:block text-6xl">🧪</div>
+                    <div class="flex flex-col items-end gap-3">
+                        <a href="recipes.html" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-lg font-semibold transition shadow-lg flex items-center gap-2">
+                            <span class="text-2xl">📖</span>
+                            <span>Recipes & Reagents</span>
+                        </a>
+                        <div class="hidden md:block text-6xl">🧪</div>
+                    </div>
                 </div>
             </div>
         </header>
@@ -303,6 +309,19 @@
                         <div class="font-semibold text-gray-800">Imaging & Microscopy</div>
                         <div class="text-sm text-gray-600">H&E, IF, IHC staining</div>
                     </button>
+                </div>
+            </div>
+
+            <!-- Recipes Banner -->
+            <div class="mt-12 bg-gradient-to-r from-green-500 to-teal-500 rounded-xl shadow-lg p-8 text-white">
+                <div class="flex items-center justify-between">
+                    <div>
+                        <h3 class="text-2xl font-bold mb-2">📖 Recipes & Reagents Reference</h3>
+                        <p class="text-green-100">Quick access to all buffer recipes, media formulations, and reagent preparations from every protocol</p>
+                    </div>
+                    <a href="recipes.html" class="bg-white text-green-600 px-8 py-4 rounded-lg font-bold hover:bg-green-50 transition shadow-lg whitespace-nowrap">
+                        View All Recipes →
+                    </a>
                 </div>
             </div>
 
