--- a/recipes.html
+++ b/recipes.html
@@ -30,7 +30,7 @@
         <!-- Search and Filter -->
         <div class="container mx-auto px-4 py-6">
             <div class="bg-white rounded-xl shadow-lg p-6 mb-6">
-                <div class="grid md:grid-cols-2 gap-4">
+                <div class="grid md:grid-cols-3 gap-4">
                     <div>
                         <label class="block text-sm font-semibold text-gray-700 mb-2">Search Recipes</label>
                         <input type="text"
@@ -50,6 +50,16 @@
                             <option value="cell-culture">Cell Culture Media</option>
                             <option value="perfusion">Perfusion Buffers</option>
                             <option value="staining">Staining Solutions</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-semibold text-gray-700 mb-2">Filter by Protocol</label>
+                        <select x-model="selectedProtocol"
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500 focus:border-transparent">
+                            <option value="all">All Protocols</option>
+                            <template x-for="protocolName in uniqueProtocols" :key="protocolName">
+                                <option :value="protocolName" x-text="protocolName"></option>
+                            </template>
                         </select>
                     </div>
                 </div>
@@ -166,6 +176,7 @@
             return {
                 searchQuery: '',
                 selectedCategory: 'all',
+                selectedProtocol: 'all',
                 recipes: [
                     {
                         name: 'Base RIPA Buffer',
@@ -986,8 +997,13 @@
                                             recipe.protocol.toLowerCase().includes(this.searchQuery.toLowerCase()) ||
                                             recipe.tags.some(tag => tag.toLowerCase().includes(this.searchQuery.toLowerCase()));
                         const matchesCategory = this.selectedCategory === 'all' || recipe.category === this.selectedCategory;
-                        return matchesSearch && matchesCategory;
+                        const matchesProtocol = this.selectedProtocol === 'all' || recipe.protocol === this.selectedProtocol;
+                        return matchesSearch && matchesCategory && matchesProtocol;
                     });
+                },
+                get uniqueProtocols() {
+                    const protocols = [...new Set(this.recipes.map(recipe => recipe.protocol))];
+                    return protocols.sort();
                 },
                 getCategoryColor(category) {
                     const colors = {
