Add Product Sheets List link to recipes page footer
New feature:
- Added link to Product_Sheets_List.md in footer of recipes.html
- Link includes document emoji icon (📄) for visual clarity
- Styled consistently with existing footer links (green-400 with hover)
- Positioned below 'Back to Protocol Index' link

Users can now easily access the comprehensive product documentation list
directly from the recipes page, providing quick reference to:
- Required datasheets and technical bulletins
- Catalog numbers and suppliers
- MSDS for hazardous materials
- ~125+ products organized by category

--- a/recipes.html
+++ b/recipes.html
@@ -180,9 +180,13 @@
             <div class="container mx-auto px-4">
                 <p class="text-sm">Consolidated recipes from Dasgupta Lab protocols</p>
                 <p class="text-sm mt-2">For Research Use Only | Compiled by Roman | October 2025</p>
-                <p class="text-sm mt-2">
+                <div class="mt-4 flex flex-col gap-2 text-sm">
                     <a href="index.html" class="text-green-400 hover:text-green-300">← Back to Protocol Index</a>
-                </p>
+                    <a href="Product_Sheets_List.md" class="text-green-400 hover:text-green-300 flex items-center gap-2">
+                        <span>📄</span>
+                        <span>View Product Sheets & Technical Documentation List</span>
+                    </a>
+                </div>
             </div>
         </footer>
     </div>
