Update Penicillin-Streptomycin specification in neural progenitor media recipes
Changed from 'included' to specific volume amounts:

Neurosphere Media (Neural Progenitors):
- Changed Pen-Strep from 'included' to '0.5 mL (1% total volume)'
- Added (100X) specification to component name
- Adjusted Neurobasal volume from 48.5 mL to 48 mL to account for Pen-Strep
- Total volume remains 50 mL

Serum Free Media (DMEM/F12-based):
- Changed Pen-Strep from 'included' to '0.5 mL (1% total volume)'
- Added (100X) specification to component name
- Adjusted DMEM/F12 volume from 49 mL to 48.5 mL to account for Pen-Strep
- Total volume remains 50 mL

Both recipes now clearly specify:
- Penicillin-Streptomycin (100X) concentration: 1X
- Amount: 0.5 mL (1% total volume)

Verified all protocol HTML files already correctly specify '1% Penicillin/Streptomycin' in media recipes

--- a/recipes.html
+++ b/recipes.html
@@ -504,10 +504,10 @@
                         volume: '50 mL',
                         storage: '4°C for 2 weeks',
                         ingredients: [
-                            { component: 'Neurobasal Medium', concentration: '-', amount: '48.5 mL' },
+                            { component: 'Neurobasal Medium', concentration: '-', amount: '48 mL' },
                             { component: 'B27 Supplement without Vitamin A (50X)', concentration: '1X', amount: '1 mL' },
                             { component: 'L-glutamine (200 mM)', concentration: '2 mM', amount: '0.5 mL' },
-                            { component: 'Penicillin-Streptomycin', concentration: '1X', amount: 'included' },
+                            { component: 'Penicillin-Streptomycin (100X)', concentration: '1X', amount: '0.5 mL (1% total volume)' },
                             { component: 'EGF (stock 20 μg/mL)', concentration: '20 ng/mL', amount: 'Add fresh' },
                             { component: 'FGF-2 (stock 20 μg/mL)', concentration: '10 ng/mL', amount: 'Add fresh' }
                         ],
@@ -527,9 +527,9 @@
                         volume: '50 mL',
                         storage: '4°C for 2 weeks',
                         ingredients: [
-                            { component: 'DMEM/F12 (1:1)', concentration: '-', amount: '49 mL' },
+                            { component: 'DMEM/F12 (1:1)', concentration: '-', amount: '48.5 mL' },
                             { component: 'B27 Supplement without Vitamin A (50X)', concentration: '1X', amount: '1 mL' },
-                            { component: 'Penicillin-Streptomycin', concentration: '1X', amount: 'included' },
+                            { component: 'Penicillin-Streptomycin (100X)', concentration: '1X', amount: '0.5 mL (1% total volume)' },
                             { component: 'EGF (stock 20 μg/mL)', concentration: '20 ng/mL', amount: 'Add fresh' },
                             { component: 'FGF-2 (stock 20 μg/mL)', concentration: '10 ng/mL', amount: 'Add fresh' }
                         ],
