Add Seahorse XF Cell Mito Stress Test protocol
New protocol added:
- Seahorse XF Cell Mito Stress Test for mitochondrial function analysis
- Comprehensive workflow covering Day Prior, Day of Assay, Running, Analysis
- Interactive checklists with Alpine.js for step tracking
- User-specific compound concentrations included (Oligomycin 30 µM, FCCP 15 µM, Rot/AA 60 µM)
- Detailed cell seeding and washing techniques with critical warnings
- Complete troubleshooting section for common issues
- Cyan/teal color theme matching Seahorse branding

Features:
- 6 main sections: Overview, Day Prior, Day of Assay, Running, Analysis, Troubleshooting
- Step-by-step compound preparation and port loading instructions
- Proper pipetting techniques to prevent cell damage
- Data analysis parameters and quality checks
- Mobile-responsive design with Tailwind CSS

Updated index.html:
- Added Seahorse protocol to Cell Assays category with ⚡ icon
- Searchable with tags: Seahorse, Mitochondria, OCR, Metabolism, XF96, XF Pro, Bioenergetics

Total: 16 comprehensive protocols

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                 tags: ['Viability', 'Fluorescence', '96-well plate', 'Cell counting', 'Cytotoxicity', 'Drug screening']
             },
             {
+                title: 'Seahorse XF Cell Mito Stress Test',
+                description: 'Mitochondrial function analysis measuring basal respiration, ATP production, maximal respiration, and spare capacity',
+                category: 'cell',
+                duration: '2 days (overnight + 3-4 hours)',
+                link: 'seahorse-mito-stress-test.html',
+                icon: '⚡',
+                tags: ['Seahorse', 'Mitochondria', 'OCR', 'Oxygen consumption', 'ATP', 'FCCP', 'Oligomycin', 'Metabolism', 'XF96', 'XF Pro', 'Bioenergetics', 'Respiration']
+            },
+            {
                 title: 'Mouse Genotyping Protocol',
                 description: 'Comprehensive genotyping for SCD1, SCD2, Cdh5-Cre, and tdTomato mouse lines with PCR protocols',
                 category: 'molecular',
