Add specific Seahorse media preparation recipe
Updated Seahorse XF Cell Mito Stress Test protocol with user's custom media formulation:
- Total volume: 50 mL (50,000 µL)
- Seahorse Base Medium: 48,900 µL
- Pyruvate: 500 µL
- Glucose: 100 µL
- Glutamine: 500 µL

Replaced placeholder text with formatted table showing exact volumes for reproducibility.

--- a/seahorse-mito-stress-test.html
+++ b/seahorse-mito-stress-test.html
@@ -414,10 +414,37 @@
                                             </table>
 
                                             <div class="mt-3 p-2 bg-white rounded border">
-                                                <p class="text-xs font-medium">📝 User's Custom Media (leave blank, will fill later):</p>
-                                                <div class="mt-1 text-xs text-gray-500 italic">
-                                                    User will add specific formulation here
-                                                </div>
+                                                <p class="text-xs font-medium mb-2">📝 User's Custom Media Recipe (for 50 mL):</p>
+                                                <table class="w-full text-xs">
+                                                    <thead class="bg-green-100">
+                                                        <tr>
+                                                            <th class="p-1 text-left">Component</th>
+                                                            <th class="p-1 text-right">Volume (µL)</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody class="text-gray-700">
+                                                        <tr class="border-b">
+                                                            <td class="p-1">Seahorse Base Medium</td>
+                                                            <td class="p-1 text-right font-medium">48,900</td>
+                                                        </tr>
+                                                        <tr class="border-b">
+                                                            <td class="p-1">Pyruvate</td>
+                                                            <td class="p-1 text-right font-medium">500</td>
+                                                        </tr>
+                                                        <tr class="border-b">
+                                                            <td class="p-1">Glucose</td>
+                                                            <td class="p-1 text-right font-medium">100</td>
+                                                        </tr>
+                                                        <tr class="border-b">
+                                                            <td class="p-1">Glutamine</td>
+                                                            <td class="p-1 text-right font-medium">500</td>
+                                                        </tr>
+                                                        <tr class="bg-green-50 font-semibold">
+                                                            <td class="p-1">Total Volume</td>
+                                                            <td class="p-1 text-right">50,000</td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
                                             </div>
                                         </div>
 
